@@ -38,11 +38,13 @@ public class CrossVersionPerformanceTestRunner extends PerformanceTestSpec {
 
     List<String> tasksToRun = []
     List<String> args = []
-    List<String> gradleOpts = []
+    List<String> gradleOpts = ['-Xms2g', '-Xmx2g', '-XX:MaxPermSize=256m']
 
     List<String> targetVersions = []
     Amount<Duration> maxExecutionTimeRegression = Duration.millis(0)
     Amount<DataAmount> maxMemoryRegression = DataAmount.bytes(0)
+
+    BuildExperimentListener buildExperimentListener
 
     CrossVersionPerformanceTestRunner(BuildExperimentRunner experimentRunner, DataReporter<CrossVersionPerformanceResults> reporter) {
         this.reporter = reporter
@@ -51,10 +53,6 @@ public class CrossVersionPerformanceTestRunner extends PerformanceTestSpec {
 
     CrossVersionPerformanceResults run() {
         assert testId
-
-        if (System.getProperty("org.gradle.performance.heapdump")) {
-            args.add("-Pheapdump")
-        }
 
         def results = new CrossVersionPerformanceResults(
                 testId: testId,
@@ -104,6 +102,7 @@ public class CrossVersionPerformanceTestRunner extends PerformanceTestSpec {
                 .displayName(dist.version.version)
                 .warmUpCount(warmUpRuns)
                 .invocationCount(runs)
+                .listener(buildExperimentListener)
                 .invocation {
             workingDirectory(projectDir)
             distribution(dist)
